# breadboard

./: .dockerignore  .eslintrc.json  .gitignore  .npmrc  .prettierrc  CODEOWNERS  DEVELOPING.md  Dockerfile  PROJECT_ACOUSTIC.md  PROJECT_AIR.md  PROJECT_ARMS.md  PROJECT_BEESWAX.md  PROJECT_CORNERSTONE.md  PROJECT_CYCLOPS.md  PROJECT_DEFLAGRATION.md  PROJECT_FILEFLY.md  PROJECT_HIVEMIND.md  PROJECT_PENGUIN.md  PROJECT_REWIND.md  README.md  createChatCompletion.json  createEmbedding.json  eslint.config.js  graphs.code-workspace  index.json  listModels.json  package-lock.json  package.json  syncpack.config.ts  temp.json  test.json  tsconfig.json  turbo.json
.agent/: README.md  daily-dig.md  (+1 more)
seeds/chunker-python/: LICENSE  README.md  pyproject.toml
seeds/chunker-python/src/: html_chunker.py  main.py
seeds/chunker-python/src/google_labs_html_chunker/: html_chunker.py
seeds/chunker-python/tests/: test_html_chunker.py
spikes/ark/backend/: .env.example  pyproject.toml
spikes/ark/backend/ark_backend/: ark_pidgin.py  artifacts.py  gemini_client.py  journey_router.py  main.py  sandbox.py  skill_loader.py  system.py  world_model.py
spikes/ark/backend/declarations/: sandbox.functions.json  sandbox.instruction.md  sandbox.metadata.json  system.functions.json  system.instruction.md
spikes/ark/backend/references/wobble-judging/: icwf-rules-2020-2025.md
spikes/ark/backend/skills/journey-architect/: SKILL.md
spikes/ark/backend/skills/teacher/: SKILL.md
spikes/ark/backend/tests/: test_ark_pidgin.py  test_echo.py  test_sandbox.py  test_shutdown.py  test_system.py
(+4437 files in other folders)
